fixed the cards UI bug with multiple lines not showing correctly

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -16,10 +16,13 @@ $grayLight: #999;
 
 html {
   overflow-y: scroll;
+  height: 100%;
 }
 
 body {
   padding-top: 60px;
+  min-height: 100%;
+  height: 100%;
 }
 
 section {
@@ -175,19 +178,20 @@ input {
 }
 
 #container {
-  position: fixed;
+  position: absolute;
   width: 340px;
   height: 280px;
   top: 50%;
   left: 50%;
+  bottom: 0px;
   margin-top: -140px;
   margin-left: -170px;
   background: #fff;
   border-radius: 3px;
   border: 1px solid #ccc;
   box-shadow: 0 1px 2px rgba(0, 0, 0, .1);
-
 }
+
 textarea,
 input[type=text],
 input[type=password] {
@@ -248,10 +252,20 @@ input[type=submit]:active {
   border-color: #888 #aaa #aaa #888
 }
 
-.flip {
+.set-container {
+  position: relative;
+  bottom: 0px;
+  width: 60%;
+  height: 60%;
+  margin-left: 20%;
+  left: 0;
+  bottom: 0px;
+}
+
+.set-container #flip {
   -webkit-perspective: 800;
-  width: 600px;
-  height: 400px;
+  width: 60%;
+  height: 80%;
   position: relative;
   margin: 50px auto;
 }
@@ -271,14 +285,35 @@ input[type=submit]:active {
   width: 100%;
   height: 100%;
   position: absolute;
-  -webkit-backface-visibility: hidden ;
-  -moz-backface-visibility: hidden ;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
   z-index: 2;
   font-family: Georgia;
-  font-size: 5em;
+  font-size: 3em;
+  font-stretch: normal;
+  -x-system-font: none;
+  -moz-font-feature-settings: normal;
+  -moz-font-language-override: normal;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: normal;
   text-align: center;
-  line-height: 350px;
+  line-height: 1.25;
+}
 
+.face .table {
+  display: table;
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  height: 100%;
+  width: 100%;
+}
+
+.face .td {
+  display: table-cell;
+  font-size: inherit;
+  vertical-align: middle;
 }
 
 .flip .card .front {
